checking the conditions for displaying the iccm referral service